# lab-memory

./: .gitignore  README.md  pyproject.toml
configs/: settings.yaml  workspaces.yaml
lab_memory/: cli.py  mcp_server.py
lab_memory/extract/: image_describer.py  pdf_extractor.py  pptx_extractor.py
lab_memory/index/: chunker.py  embedder.py  store.py
lab_memory/query/: retriever.py  synthesizer.py
